@@ -9,11 +9,11 @@
 \usage{
 clusterVisualization(object, maincomp = FALSE, connected = FALSE,
   host = "127.0.0.1", port = 9091, clusters = NULL,
-  windowCenterOnly = TRUE)
+  onlyGenesInDE = TRUE)
 
 \S4method{clusterVisualization}{Transcriptogram}(object, maincomp = FALSE,
   connected = FALSE, host = "127.0.0.1", port = 9091, clusters = NULL,
-  windowCenterOnly = TRUE)
+  onlyGenesInDE = TRUE)
 }
 \arguments{
 \item{object}{An object of class Transcriptogram.}
@@ -33,8 +33,9 @@ listen.}
 \item{clusters}{An integer vector specifying the clusters to be
 displayed, if NULL, all clusters will be displayed.}
 
-\item{windowCenterOnly}{Logical value, set as TRUE to get only the central
-gene of each window. The default value of this argument is TRUE.}
+\item{onlyGenesInDE}{Logical value, set as TRUE to use only the genes
+in the DE slot. Set as FALSE to use all the genes referring to the positions
+in the clusters slot. The default value of this argument is TRUE.}
 }
 \value{
 This function returns an object of the RedPort Class.
